--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
     <main>
-        <h1 id="page-title">Light Mode ON</h1>
-        <button aria-label="selecionar-modo" id="mode-selector">dark mode</button>
+        <h1 id="page-title">Light-Mode ON</h1>
+        <button aria-label="selecionar-modo" id="mode-selector">dark-mode</button>
     </main>
 
     <footer>Manipulando a DOM com JavaScript</footer>
